--- a/footer.html
+++ b/footer.html
@@ -70,10 +70,10 @@
       <div class="bottom-footer-block">
         <div class="copyright-text">
           Copyright © <a
-            href="https://afani.dev"
+            href="https://pandekumu.wixsite.com/softnet-labs"
             target="_blank"
             class="bottom-footer-link"
-            >Afani Martin</a
+            >SoftNet Labs - South Sudan</a
           >
         </div>
       </div>
